force-app/main/default/objects/LWC_Field_Creator_Type_Mapping__mdt/LWC_Field_Creator_Type_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>LWC Field Creator Type Mapping</label>
    <pluralLabel>LWC Field Creator Type Mappings</pluralLabel>
</CustomObject>