force-app/main/default/objects/LWC_Field_Creator_Type_Mapping__mdt/fields/Available_For__c.field-meta.xml
<CustomField>
    <fullName>Available_For__c</fullName>
    <label>Available For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CustomObject,CustomMetadata,CustomSetting</fullName>
                <default>true</default>
                <label>CustomObject,CustomMetadata,CustomSetting</label>
            </value>
            <value>
                <fullName>CustomObject</fullName>
            </value>
            <value>
                <fullName>CustomMetadata</fullName>
            </value>
            <value>
                <fullName>CustomSetting</fullName>
            </value>
            <value>
                <fullName>CustomObject,CustomMetadata</fullName>
            </value>
            <value>
                <fullName>CustomObject,CustomSetting</fullName>
            </value>
            <value>
                <fullName>CustomMetadata,CustomSetting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>