force-app/main/default/objects/LWC_Field_Creator_Type_Mapping__mdt/fields/SF_Type__c.field-meta.xml
<CustomField>
    <fullName>SF_Type__c</fullName>
    <label>SF Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>